# ros-noetic-template

./: CLAUDE.md  Dockerfile  PLANNING.md  README.md  TASK.md  docker-compose.yaml
catkin_ws/src/: CMakeLists.txt
catkin_ws/src/ros_template_node/: CMakeLists.txt  package.xml
catkin_ws/src/ros_template_node/include/ros_template_node/: template_node.h
catkin_ws/src/ros_template_node/launch/: template_node.launch
catkin_ws/src/ros_template_node/src/: template_node.cpp
